src/objects/PageToItem__c.object
<CustomObject>
    <description>This is a junction object that links contentblockitems to a page. Working with a junction object makes content items re-usable across different pages.</description>
    <fields>
        <fullName>ContentBlockItem__c</fullName>
        <label>ContentBlockItem</label>
        <referenceTo>ContentBlockItem__c</referenceTo>
        <relationshipLabel>PageItem</relationshipLabel>
        <relationshipName>PageItem</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Display_in_Contentblock__c</fullName>
        <label>Display in Contentblock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipLabel>PageItem</relationshipLabel>
        <relationshipName>PageItem</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PageItem</label>
    <nameField>
        <displayFormat>ITEM-{00000}</displayFormat>
        <label>PageToItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PageItem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>